--- a/index.html
+++ b/index.html
@@ -11,6 +11,95 @@
 
 <body>
 
+  <!--Header part-->
+
+  <div class="header">
+    <div class="logo">Header Logo</div>
+    <div class="links">
+      <ul>
+        <li><a href="">Header link one</a></li>
+        <li><a href="">Header link two</a></li>
+        <li><a href="">Header link three</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!--Hero part-->
+
+  <div class="hero">
+    <div class="hero-left">
+      <div class="hero-main-text">
+        <h1>This website is awesome</h1>
+      </div>
+      <div class="subtext">
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+          contrast</p>
+      </div>
+      <div class="header-signup">
+        <button>Sign up</button>
+      </div>
+    </div>
+    <div class="hero-right image">
+
+    </div>
+  </div>
+
+  <!--Main part-->
+
+  <div class="main">
+    <div class="info">
+      <h2>Some random information</h2>
+      <div class="images-container">
+        <div class="images">
+          <img src="images/" alt="">
+          <p>this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="images">
+          <img src="images/" alt="">
+          <p>this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="images">
+          <img src="images/" alt="">
+          <p>this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="images">
+          <img src="images/" alt="">
+          <p>this is some subtext under an ilustration or image</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="author">
+      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+        will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p>-Thor, God of thunder</p>
+    </div>
+
+
+    <div class="card">
+      <div class="content">
+        <div class="c-left">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="c-right">
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Footer part-->
+
+  <div class="footer">
+    Copyright © The Odin Project 2022
+  </div>
+
+
+
+
+
 </body>
 
 </html>
