--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <button>Sign up</button>
       </div>
     </div>
-    <div class="hero-right image">
-
+    <div class="hero-right ">
+      <img class="image" src="images/lemur.webp" alt="">
     </div>
   </div>
 
