--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
   <!--Header part-->
 
-  <div class="header">
+  <header>
     <div class="logo">Header Logo</div>
-    <div class="links">
+    <nav class="links">
       <ul>
         <li><a href="">Header link one</a></li>
         <li><a href="">Header link two</a></li>
         <li><a href="">Header link three</a></li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </header>
 
   <!--Hero part-->
 
@@ -46,29 +46,33 @@
 
   <!--Main part-->
 
-  <div class="main">
+  <main>
+
+    <!--Info-->
+
     <div class="info">
       <h2>Some random information</h2>
-      <div class="images-container">
+      <div class="animals">
         <div class="images">
-          <img src="images/" alt="">
+          <img src="images/pelican.webp" alt="">
           <p>this is some subtext under an ilustration or image</p>
         </div>
         <div class="images">
-          <img src="images/" alt="">
+          <img src="images/grey-seal.webp" alt="">
           <p>this is some subtext under an ilustration or image</p>
         </div>
         <div class="images">
-          <img src="images/" alt="">
+          <img src="images/elephant.webp" alt="">
           <p>this is some subtext under an ilustration or image</p>
         </div>
         <div class="images">
-          <img src="images/" alt="">
+          <img src="images/owl.webp" alt="">
           <p>this is some subtext under an ilustration or image</p>
         </div>
       </div>
     </div>
 
+    <!--Author-->
 
     <div class="author">
       <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
@@ -76,6 +80,7 @@
       <p>-Thor, God of thunder</p>
     </div>
 
+    <!--Card-->
 
     <div class="card">
       <div class="content">
@@ -88,13 +93,13 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
   <!--Footer part-->
 
-  <div class="footer">
+  <footer>
     Copyright © The Odin Project 2022
-  </div>
+  </footer>
 
 
 
