--- a/index.html
+++ b/index.html
@@ -75,14 +75,22 @@
     <!--Author-->
 
     <div class="author">
-      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
-        will actually read it. Who knows? All I know is that it looks nice.</p>
-      <p>-Thor, God of thunder</p>
+      <div class="content-author">
+        <p class="p-one">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+          or
+          maybe people
+          will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="thor">
+          <p>-Thor, God of thunder</p>
+        </div>
+
+      </div>
     </div>
 
     <!--Card-->
 
     <div class="card">
+
       <div class="content">
         <div class="c-left">
           <h3>Call to action! It's time!</h3>
@@ -92,6 +100,7 @@
           <button>Sign up</button>
         </div>
       </div>
+
     </div>
   </main>
 
