Add alt image and links to buttons

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
           contrast</p>
       </div>
       <div class="header-signup">
-        <button>Sign up</button>
+        <button><a href="pages/get_out.html">I'm a
+            button</a></button>
       </div>
     </div>
     <div class="hero-right ">
-      <img class="image" src="images/lemur.webp" alt="">
+      <img class="image" src="images/lemur.webp" alt="King Julien">
     </div>
   </div>
 
@@ -51,23 +52,23 @@
     <!--Info-->
 
     <div class="info">
-      <h2>Some random information</h2>
+      <h2>Wild Animals</h2>
       <div class="animals">
         <div class="images">
-          <img src="images/pelican.webp" alt="">
-          <p>this is some subtext under an ilustration or image</p>
+          <img src="images/pelican.webp" alt="Pelican">
+          <p>A simple pelican</p>
         </div>
         <div class="images">
-          <img src="images/grey-seal.webp" alt="">
-          <p>this is some subtext under an ilustration or image</p>
+          <img src="images/grey-seal.webp" alt="Grey Seal">
+          <p>Gray seal being ball</p>
         </div>
         <div class="images">
-          <img src="images/elephant.webp" alt="">
-          <p>this is some subtext under an ilustration or image</p>
+          <img src="images/elephant.webp" alt="Elephant">
+          <p>Lumberjack elephant</p>
         </div>
         <div class="images">
-          <img src="images/owl.webp" alt="">
-          <p>this is some subtext under an ilustration or image</p>
+          <img src="images/owl.webp" alt="Owl">
+          <p>Owl judging you</p>
         </div>
       </div>
     </div>
@@ -76,12 +77,12 @@
 
     <div class="author">
       <div class="content-author">
-        <p class="p-one">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-          or
-          maybe people
-          will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="p-one">I like to move it, move it
+          I like to move it, move it,
+          I like to move it, move it.
+          Ya like to (move it!)</p>
         <div class="thor">
-          <p>-Thor, God of thunder</p>
+          <p>-King Julien</p>
         </div>
 
       </div>
@@ -93,11 +94,15 @@
 
       <div class="content">
         <div class="c-left">
-          <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product by clicking that button right over there!</p>
+          <h3>What animal is Mort?</h3>
+          <p>Mort is a mouse lemur. They are the smallest of the primates and reach a total body length between 23 and
+            29
+            centimeters. Mouse lemurs mainly live at night and eat flowers, fruit nectar, buds and leaves as well as
+            small insects.</p>
         </div>
         <div class="c-right">
-          <button>Sign up</button>
+          <button><a
+              href="https://www.lyricsondemand.com/k/kingjulianlyrics/iliketomoveitmoveitlyrics.html">Hehe!</a></button>
         </div>
       </div>
 
