Add links to header and modify titles

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <!--Header part-->
 
   <header>
-    <div class="logo">Header Logo</div>
+    <div class="logo">agust1n-p</div>
     <nav class="links">
       <ul>
-        <li><a href="">Header link one</a></li>
-        <li><a href="">Header link two</a></li>
-        <li><a href="">Header link three</a></li>
+        <li><a href="https://github.com/agust1n-p/landing-page">Github</a></li>
+        <li><a href="">Discord</a></li>
+        <li><a href="https://www.theodinproject.com/">The Odin Project</a></li>
       </ul>
     </nav>
   </header>
@@ -28,9 +28,8 @@
 
   <div class="hero">
     <div class="hero-left">
-      <div class="hero-main-text">
-        <h1>This website is awesome</h1>
-      </div>
+
+      <h1>Website about some animals</h1>
       <div class="subtext">
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
           contrast</p>
@@ -52,7 +51,7 @@
     <!--Info-->
 
     <div class="info">
-      <h2>Wild Animals</h2>
+      <h2>Random Animals</h2>
       <div class="animals">
         <div class="images">
           <img src="images/pelican.webp" alt="Pelican">
@@ -112,7 +111,7 @@
   <!--Footer part-->
 
   <footer>
-    Copyright © The Odin Project 2022
+    © 2022 The Odin Project
   </footer>
 
 
